# pulsive

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  integration.yml  pages.yml  release.yml
crates/pulsive-core/: Cargo.toml
crates/pulsive-core/src/: actor.rs  cmd.rs  effect.rs  entity.rs  error.rs  expr.rs  identity.rs  journal.rs  lib.rs  model.rs  msg.rs  rng.rs  runtime.rs  state_history.rs  time.rs  value.rs  write_set.rs
crates/pulsive-db/: Cargo.toml
crates/pulsive-db/src/: error.rs  lib.rs  queries.rs  store.rs
crates/pulsive-db/src/models/: definition.rs  entity.rs  mod.rs
crates/pulsive-godot/: Cargo.toml
crates/pulsive-godot/src/: bridge.rs  engine.rs  lib.rs
crates/pulsive-hub/: Cargo.toml
crates/pulsive-hub/src/: commit.rs  config.rs  conflict.rs  core.rs  error.rs  group.rs  hash.rs  hub.rs  lib.rs  partition.rs  snapshot.rs  tick_sync.rs
crates/pulsive-journal/: Cargo.toml
crates/pulsive-journal/src/: auditor.rs  error.rs  exporter.rs  lib.rs  replayer.rs
crates/pulsive-netcode/: Cargo.toml
crates/pulsive-netcode/src/: error.rs  input_buffer.rs  interpolation.rs  lib.rs  prediction.rs  reconciliation.rs  transport.rs
crates/pulsive-rollback-buffer/: Cargo.toml
crates/pulsive-rollback-buffer/src/: lib.rs
crates/pulsive-script/: Cargo.toml
crates/pulsive-script/src/: error.rs  lib.rs  loader.rs
crates/pulsive-script/src/schema/: entity.rs  event.rs  mod.rs  resource.rs
docs/: _config.yml  index.md
docs/_layouts/: default.html
examples/godot_demo/: README.md  main.gd  main.tscn  project.godot  pulsive.gdextension
examples/http_server/: Cargo.toml  README.md
examples/http_server/config/: server.ron
examples/http_server/integration-test/: Dockerfile.backend  Dockerfile.loadtest  Dockerfile.server  README.md  backend_server.py  docker-compose.yml  run_tests.sh  server-test.ron
examples/http_server/src/: cache.rs  config.rs  lib.rs  main.rs  proxy.rs  pulsive_router.rs  rate_limit.rs  router.rs  static_files.rs
examples/http_server/www/: 404.html  500.html  index.html
examples/http_server/www/static/: script.js  style.css
examples/simple_economy/: Cargo.toml
examples/simple_economy/scripts/: entity_types.ron  resources.ron
examples/simple_economy/src/: main.rs
examples/typing_game/: Cargo.toml
examples/typing_game/data/: sentences.ron
examples/typing_game/src/: main.rs
scripts/: pre-commit  pre-push
