[workspace]
members = [
    "crates/pulsive-core",
    "crates/pulsive-hub",
    "crates/pulsive-db",
    "crates/pulsive-script",
    "crates/pulsive-godot",
    "crates/pulsive-journal",
    "crates/pulsive-netcode",
    "crates/pulsive-rollback-buffer",
    "examples/simple_economy",
    "examples/typing_game",
    "examples/http_server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/pulsive"

[workspace.dependencies]
# Internal crates
pulsive-core = { path = "crates/pulsive-core" }
pulsive-hub = { path = "crates/pulsive-hub" }
pulsive-db = { path = "crates/pulsive-db" }
pulsive-script = { path = "crates/pulsive-script" }
pulsive-godot = { path = "crates/pulsive-godot" }
pulsive-journal = { path = "crates/pulsive-journal" }
pulsive-netcode = { path = "crates/pulsive-netcode" }
pulsive-rollback-buffer = { path = "crates/pulsive-rollback-buffer" }

# Database
native_db = "0.8"
native_model = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"

# Godot bindings
godot = "0.4"

# Error handling
thiserror = "2.0"

# Utilities
indexmap = { version = "2.0", features = ["serde"] }
bincode = "3.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
