[package]
name = "pulsive-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core reactive engine with Elm-style architecture and expression evaluation"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
