[package]
name = "pulsive-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database layer using native_db for pulsive engine"

[dependencies]
pulsive-core = { workspace = true }
native_db = { workspace = true }
native_model = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
