[package]
name = "pulsive-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MVCC orchestrator for parallel execution of pulsive-core instances"

[features]
default = []

[dependencies]
pulsive-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]

