[package]
name = "pulsive-netcode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Netcode patterns for pulsive: prediction, interpolation, reconciliation, and rollback"

[features]
default = []

[dependencies]
pulsive-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

