[package]
name = "pulsive-script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RON script loader and schema definitions for pulsive engine"

[dependencies]
pulsive-core = { workspace = true }
pulsive-db = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
